Removing unnecessary; toFixed bugfix; cart rate bugfix; goods-visible added margin-bottom; redesign delete-product button

--- a/style.css
+++ b/style.css
@@ -21,9 +21,6 @@ nav {
     position: absolute;
     right: 10px;
     top: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
     z-index: 99;
 }
 
@@ -36,7 +33,6 @@ nav {
     display: flex;
     flex-direction: column;
     border-radius: 0 25px 25px 0;
-    /*align-items: center;*/
     position: absolute;
     transition: 0.5s;
     z-index: 2;
@@ -53,6 +49,8 @@ nav {
     display: flex;
     position: relative;
     opacity: 70%;
+    align-items: center;
+    justify-content: center;
 }
 
 #sidebar-box:hover {
@@ -62,7 +60,7 @@ nav {
 #products-count {
     width: 20px;
     height: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     background: red;
     color: white;
     font-size: 10px;
@@ -72,10 +70,6 @@ nav {
     text-align: center;
     line-height: 20px;
     display: none;
-}
-
-#sidebar-icon {
-    margin: auto;
 }
 
 .header {
@@ -107,14 +101,13 @@ nav {
     padding: 20px;
     border-radius: 25px 10px 10px 25px;
     margin-top: 100px;
-    position: relative;
+    margin-bottom: 20px;
 }
 
 #cart-header-container {
     position: sticky;
     top: -20px;
     background: purple;
-    justify-content: center;
     width: 100%;
     z-index: 1;
 }
@@ -132,9 +125,9 @@ nav {
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
     overflow: auto;
     scroll-behavior: smooth;
-    margin-bottom: 20px;
     gap: 10px
 }
 
@@ -172,15 +165,19 @@ nav {
     width: 100%;
     font-weight: bold;
     font-size: 20px;
-    margin-bottom: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
+    background: rgba(10,173,141,1);
     background: radial-gradient(rgba(10,173,141,1) 15%, rgba(20,232,112,1) 100%);
     color: white;
     border: none;
     border-radius: 25px;
     text-align: center;
     transition: 0.5s;
+}
+
+#order {
+    margin-bottom: 20px;
 }
 
 #order:hover, .buy-button:hover {
@@ -193,34 +190,33 @@ nav {
 
 .product {
     width: 100%;
-    display: flex;
-    flex-direction: column;
     background: white;
     box-sizing: border-box;
     padding: 10px;
     border-radius: 25px;
+    z-index: 0;
 }
 
 .delete-product {
-    width: 20px;
+    width: 100%;
     height: 20px;
-    text-align: right;
-    background: red url("/images/cross.webp") no-repeat center;
+    text-align: center;
+    font-weight: bold;
+    background: red;
     background-size: contain;
-    justify-self: end;
-    border-radius: 25px;
-    margin-left: auto;
-    margin-right: 10px;
+    margin-bottom: 10px;
+    border-radius: 40px;
+    border: 1px black solid;
     transition: 0.5s;
 }
 
 .delete-product:hover {
-    background: #DD0000 url("/images/cross.webp") no-repeat center;
+    background: #DD0000;
     background-size: contain;
 }
 
 .delete-product:active {
-    background: #BB0000 url("/images/cross.webp") no-repeat center;
+    background: #BB0000;
     background-size: contain;
 }
 
@@ -233,22 +229,10 @@ nav {
     margin-bottom: 5px;
 }
 
-.product-title {
-    width: 100%;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    user-select: text;
-}
-
-.product-description {
+.text {
     width: 100%;
     margin-bottom: 5px;
     user-select: text;
-}
-
-.text-wrapper {
-    width: 100%;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -260,7 +244,6 @@ nav {
     flex-direction: column;
     align-items: end;
     font-size: 13px;
-    margin-top: auto;
     margin-bottom: 5px;
     user-select: text;
 }
@@ -269,20 +252,19 @@ nav {
     width: 100%;
     height: 20px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .change-count-product {
     width: 20px;
-    height: 100%;
+    height: 20px;
     border: none;
-    background-color: transparent;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    display: inline-block;
+    background: transparent;
+    text-align: center;
+    line-height: 20px;
+    font-size: 24px;
+    font-weight: bold;
     transition: 0.5s;
 }
 
@@ -294,7 +276,6 @@ nav {
     width: 100%;
     text-align: center;
     font-weight: bold;
-    display: inline-block;
 }
 
 .rate {
@@ -305,20 +286,22 @@ nav {
     position: relative;
 }
 
-.rate img {
+.rate p {
     width: 129px;
     height: 30px;
     position: absolute;
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
 }
 
 .rate-mask {
-    width: 100%;
+    color: gold;
     -webkit-mask-image: -webkit-gradient(linear, 0% 0%, 100% 0%, from(rgba(0,0,0,1)), to(rgba(0,0,0,1)));
     -webkit-mask-repeat: no-repeat;
 
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
     mask-repeat: no-repeat;
-    z-index: 0;
 }
 
 .rate-count {
